[fix] back to top button is visible on mobile.

--- a/app/assets/styles/modules/components/_back-to-top-button.css
+++ b/app/assets/styles/modules/components/_back-to-top-button.css
@@ -12,7 +12,10 @@
   z-index: 1;
   transition: all 100ms;
   cursor: pointer;
-  display: none;
+
+  @mixin atLarge {
+    display: none;
+  }
 
   i {
     color: $accent-1;
